z-index fix

--- a/assets/scss/components/promotional-message.scss
+++ b/assets/scss/components/promotional-message.scss
@@ -3,6 +3,7 @@
   text-align:center;
   position:relative;
   display:inline-block;
+  z-index: 1;
 
   h3 {
     font-size: 24px;
