--- a/assets/scss/layouts/header.scss
+++ b/assets/scss/layouts/header.scss
@@ -6,6 +6,7 @@
   height: 5em;
   margin-bottom:2em;
   margin-top:2em;
+  z-index: 1;
 
   &__branding {
     display: flex;
